# pco25_lab07

./: CMakeLists.txt  barbier.qrc  pco_rendu.sh  rapport.md
src/: application.cpp  application.h  barber.cpp  barber.h  client.cpp  client.h  main.cpp  pcosalon.cpp  pcosalon.h  salon.h  salonbarberinterface.h  salonclientinterface.h
src/utils/: display.cpp  display.h  graphicsaloninterface.cpp  graphicsaloninterface.h  launchable.h  mainwindow.cpp  mainwindow.h
